# streamforge

./: .gitignore  README.md  idea.md
apps/api/: main.py  pyproject.toml
apps/api/api/v1/: router.py
apps/api/api/v1/metadata/: router.py  schemas.py  services.py
apps/api/api/v1/query/: router.py  schemas.py  services.py
apps/api/core/: config.py
apps/api/db/: connection.py
apps/api/tests/: conftest.py  test_metadata.py  test_query.py
apps/ingest/: consumer.py  producer.py  pyproject.toml
apps/web/: package-lock.json  package.json
docs/: metadata_catalog.md
ops/docker/: docker-compose.yml
ops/postgres/: 01_init.sql  02_seeding.sql
ops/trino/: init.sql
ops/trino/etc/catalog/: minio.properties
pmo/: charter.md  roadmap.md
pmo/adr/: ADR-001-redpanda.md  ADR-002-minio.md  ADR-003-trino.md  ADR-004-parquet.md  ADR-005-polars.md  ADR-006-fastapi.md  ADR-007-sveltekit.md  ADR-008-postgres-catalog.md  ADR-009-orchestration.md
scripts/: bootstrap_lake.py  init_trino.py  pyproject.toml
