[tool.poetry]
name = "streamforge-ingest"
version = "0.1.0"
description = "Ingestion worker for StreamForge"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
polars = "^0.20.0"
minio = "^7.2.0"
psycopg2-binary = "^2.9.9"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
